[metadata]
name = GPTalk
version = 0.0.1
author = 0ut0flin3
author_email = 0ut0flin3@protonmail.com
description = Interact with GPT-3 using your voice instead of text, in any language
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/0ut0flin3/gptalk
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.6
include_package_data = True
